--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# HTTPS Proxy certificates
+localhost.pem
+localhost-key.pem
