--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
   },
   "dependencies": {
     "@storyblok/react": "^2.0.13",
+    "babel-preset-es2015": "^6.24.1",
+    "html-react-parser": "^3.0.15",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-animated-css": "^1.2.1",
+    "react-dom": "18.2.0",
+    "react-pdf": "^6.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@iconify/react": "^4.1.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "webpack": "^5.76.2"
   }
 }
