--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-es2015": "^6.24.1",
     "html-react-parser": "^3.0.15",
     "next": "latest",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "18.2.0",
